tests/extensions/imports/valid/alias.wacc
# Output: 
# 42
import "samelib.wacc" as w;
begin
    int x = call w::f();
    print x
end