tests/extensions/imports/semanticErr/wrongLibrary.wacc
import "notfound.wacc";
begin
    int x = call notfound::get(3);
    print x
end